# nbadb

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .sqlfluff  AGENTS.md  AUDIT-chat-with-data.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  dataset-metadata.json  docker-compose.proxy.yml  environment.yml  pyproject.toml  readthedocs-requirements.txt  requirements.txt  setup.sh
.claude/skills/: docs-steward
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  actionlint.yaml  dependabot.yml  labels.yml  pull_request_template.md  release.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  questions.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  endpoint_request.md  endpoint_request.yml  feature_request.md  feature_request.yml
.github/baselines/: model-audit-summary.json
.github/scripts/: probe_discovery_transport.py  run_extract_lane.py  run_with_deadline.sh  seed_discovery_artifacts.py  validate_lane_state.py  verify_discovery_bundle.py  vpn_control_plane.py  write_lane_metadata.py
.github/workflows/: ci.yml  daily-update.yml  docs-deploy.yml  full-extraction.yml  model-audit.yml  monthly-update.yml  release.yml  update-metadata.yml
.serena/: project.yml
.serena/memories/: completion_checks.md  project_overview.md  style_and_conventions.md  suggested_commands.md
MagicMock/mock.duckdb_path/: 139790630360112.player-team-season-workload.player-team-season-workload.json  139790630477920.player-team-season-workload.player-team-season-workload.json  139790630501696.player-team-season-workload.player-team-season-workload.json  139790634312832.player-team-season-workload.player-team-season-workload.json  139790634347280.player-team-season-workload.player-team-season-workload.json  139790634644112.player-team-season-workload.player-team-season-workload.json  139790638681792.player-team-season-workload.player-team-season-workload.json  139790638687264.player-team-season-workload.player-team-season-workload.json  139790638710608.player-team-season-workload.player-team-season-workload.json  139790638774272.player-team-season-workload.player-team-season-workload.json  139790643960320.player-team-season-workload.player-team-season-workload.json  139790644054064.player-team-season-workload.player-team-season-workload.json  139790644363040.player-team-season-workload.player-team-season-workload.json  139790644425792.player-team-season-workload.player-team-season-workload.json  139790644605056.player-team-season-workload.player-team-season-workload.json  140047157864800.player-team-season-workload.json  (+49 more)
apps/chat/: chainlit.md  chainlit_app.py  pyproject.toml
apps/chat/.chainlit/: config.toml
apps/chat/.chainlit/translations/: ar-SA.json  bn.json  da-DK.json  de-DE.json  el-GR.json  en-US.json  es.json  fr-FR.json  gu.json  he-IL.json  hi.json  it.json  ja.json  kn.json  ko.json  ml.json  mr.json  nl.json  ta.json  te.json  zh-CN.json  zh-TW.json
apps/chat/mcp_servers/: sandbox.py  sql.py
apps/chat/public/: stylesheet.css  theme.json
apps/chat/server/: __init__.py  __main__.py  _preamble.py  _safety.py  _sandbox_exec.py  _session.py  _spreadsheet_template.py  _sql_exec.py  agent.py  config.py  copilot_backend.py  db.py  mcp_client.py  prompts.py  tracing.py
apps/chat/server/providers/: __init__.py  copilot_adapter.py  factory.py
apps/chat/server/tools/: web_fetch.py  web_search.py
apps/chat/skills/nba-data-analytics/: SKILL.md
apps/chat/skills/nba-data-analytics/references/: query-cookbook.md  schema-guide.md
apps/chat/skills/nba-data-analytics/scripts/: compare.py  court.py  lineups.py  metric_calculator.py  nba_stats.py  season_utils.py  similarity.py  team_colors.py  trends.py
basketball_db/: extract.py  update.py  utils.py
chat/: chainlit.md  chainlit_app.py  pyproject.toml
docs/: .env.example  .gitignore  .prettierignore  AGENTS.md  audit-findings-A-home.md  audit-findings-B-shell.md  audit-findings-C-core.md  audit-findings-D-schema.md  audit-findings-E-diagrams.md  audit-findings-F-endpoints-guides.md  audit-findings-G-widgets.md  audit-findings-H-admin-auth.md  audit-findings-I-admin-ops.md  audit-findings-J-special.md  components.json  conf.py  eslint.config.mjs  index.md  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pnpm.overrides.yaml  proxy.ts  robots.txt  source.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
kb/: .gitignore  README.md
logs/: d_ed106a0542b2417b___init___py.html  d_ed106a0542b2417b_data_py.html  d_ed106a0542b2417b_extract_py.html  d_ed106a0542b2417b_update_py.html  d_ed106a0542b2417b_utils_py.html  index.html  report.html  status.json
nba-db/: nba.sqlite
nba_db/: __init__.py  data.py  extract.py  logger.py  update.py  utils.py
nbadb/: logging.py  main.py  nbaDbHelper.py  schemas.py
notebooks/: Untitled3.ipynb  analytics_deep_dive.ipynb  database-generator.ipynb  database-updater-daily.ipynb  database-updater-monthly.ipynb  dev.ipynb  devv.ipynb  kaggle_pipeline.ipynb  kaggle_starter.ipynb  kaggle_update.py  nb.ipynb  nba_aging_curves.ipynb  nba_aging_curves_kernel-metadata.json  nba_chat_with_data.ipynb  nba_chat_with_data_kernel-metadata.json  nba_defense_decoded.ipynb  nba_defense_decoded_kernel-metadata.json  nba_draft_combine_analysis.ipynb  nba_draft_combine_analysis_kernel-metadata.json  nba_game_prediction.ipynb  nba_game_prediction_kernel-metadata.json  nba_mvp_predictor.ipynb  nba_mvp_predictor_kernel-metadata.json  nba_play_by_play_insights.ipynb  nba_play_by_play_insights_kernel-metadata.json  nba_player_archetypes.ipynb  nba_player_archetypes_kernel-metadata.json  nba_player_dashboard.ipynb  nba_player_dashboard_kernel-metadata.json  nba_player_similarity.ipynb  nba_player_similarity_kernel-metadata.json  nba_shot_chart_analysis.ipynb  nba_shot_chart_analysis_kernel-metadata.json  nbadb_utils.py
tests/: conftest.py  test_extract.py  test_utils.py
utils/: kaggle_secrets.py  kaggle_web_client.py  logging.conf  requirements.txt  setup.sh
(+1110 files in other folders)
