[tool.poetry]
name = "nbadb"
version = "1.0.0"
description = "all the necessary code for the production and update of the Kaggle NBA Database"
authors = ["wyattowalsh <wyattowalsh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
kaggle = "^1.6.6"
sqlalchemy = "^2.0.28"
nba-api = "^1.4.1"
requests = "^2.31.0"
numpy = "^1.26.4"
pandarallel = "^1.6.5"
ipywidgets = "^8.1.2"
aiohttp = "^3.9.3"
pyproxyhelper = {git = "https://github.com/wyattowalsh/pyproxyhelper.git"}
asyncio = "^3.4.3"
typer = "^0.12.0"
nest-asyncio = "^1.6.0"
backoff = "^2.2.1"
pandera = {extras = ["all"], version = "^0.18.3"}
dask = {extras = ["dataframe"], version = "^2024.4.1"}

[tool.poetry.group.dev.dependencies]
loguru = "^0.7.2"
rich = "^13.7.1"

[tool.poetry.group.notebook.dependencies]
nbdime = "^4.0.1"
jupyterlab-git = "^0.50.0"
jupyter-contrib-nbextensions = "^0.7.0"
jupyterlab = "^4.1.5"
jupyterlab-github = "^4.0.0"
jupyter-nbextensions-configurator = "^0.6.3"
nbconvert = "^7.16.2"

[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"
pytest-sugar = "^1.0.0"
pytest-emoji = "^0.2.0"
pytest-html = "^4.1.1"
pytest-icdiff = "^0.9"
pytest-instafail = "^0.5.0"
pytest-timeout = "^2.3.1"
pytest-benchmark = "^4.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = {extras = ["all"], version = "^3.5.0"}
hypothesis = "^6.100.0"
pytest-asyncio = "^0.23.6"
anyio = "^4.3.0"


[tool.poetry.group.formatters.dependencies]
isort = "^5.13.2"
pylint = "^3.1.0"
autoflake = "^2.3.1"
pylama = {extras = ["all"], version = "^8.4.1"}
autopep8 = "^2.1.0"
yapf = "^0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-n auto --verbose --hypothesis-show-statistics --html=logs/report.html --self-contained-html --emoji --instafail  --cov=pyproxyhelper/* --cov-append --cov-report html"
testpaths = [ "tests",]
console_output_style = "progress"
junit_logging = "all"
log_cli = "True"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s - [%(levelname)s] - %(name)s - (%(filename)s).%(funcName)s(%(lineno)d) - %(message)s"
log_cli_level = "DEBUG"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest-logs.txt"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s - [%(levelname)s] - %(name)s - (%(filename)s).%(funcName)s(%(lineno)d) - %(message)s"
log_file_level = "DEBUG"
log_format = "%(asctime)s - [%(levelname)s] - %(name)s - (%(filename)s).%(funcName)s(%(lineno)d) - %(message)s"
log_level = "DEBUG"
required_plugins = [ "pytest-sugar", "pytest-html", "pytest-emoji", "pytest-icdiff", "pytest-instafail", "pytest-timeout", "pytest-benchmark", "pytest-cov", "pytest-mock", "pytest-xdist", "hypothesis", "pytest-asyncio", "anyio" ]
timeout = 500

[tool.isort]
profile = "black"
src_paths = [ "pyproxyhelper/", "tests/",]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true
ignore-init-module-imports = true

[tool.pylama]
skip = "*/.tox/*,*/.env/*"
linters = "eradicate,mccabe,pycodestyle,pyflakes,pylint,isort,pydocstyle"

[tool.yapf]
based_on_style = "pep8"
space_inside_brackets = true
spaces_around_dict_delimiters = true
spaces_around_list_delimiters = true
spaces_around_power_operator = true
spaces_around_tuple_delimiters = true
spaces_before_comment = "15, 20"
