[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[project]
name = "nbadb"
version = "4.0.0"
description = "Comprehensive NBA database: 131 endpoints → star schema → SQLite + DuckDB + Parquet + CSV"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Wyatt Walsh", email = "wyattowalsh@gmail.com" }]
keywords = ["nba", "basketball", "stats", "database", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "nba-api>=1.11.4",
    "proxywhirl>=0.3.2",
    "polars[database,pyarrow]>=1.38.1",
    "pandera[polars]>=0.29",
    "sqlmodel>=0.0.37,<0.1.0",
    "duckdb>=1.4",
    "kagglehub>=1.0",
    "typer>=0.15",
    "rich>=13.7",
    "loguru>=0.7",
    "pydantic-settings>=2.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "hypothesis>=6.100",
    "ruff>=0.9",
    "ty>=0.0.19",
]

[project.scripts]
nbadb = "nbadb.cli.app:app"

[project.urls]
Homepage = "https://github.com/wyattowalsh/nbadb"
Documentation = "https://nbadb.w4w.dev"
Repository = "https://github.com/wyattowalsh/nbadb"
"Kaggle Dataset" = "https://www.kaggle.com/datasets/wyattowalsh/basketball"

[tool.hatch.build.targets.wheel]
packages = ["src/nbadb"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ty.src]
include = ["src"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "warn"
possibly-missing-attribute = "warn"

[tool.ty.analysis]
allowed-unresolved-imports = ["pandera.**", "nba_api.**"]
respect-type-ignore-comments = true

[[tool.ty.overrides]]
include = ["**/models/**", "**/schemas/**"]
[tool.ty.overrides.rules]
unresolved-attribute = "warn"
invalid-assignment = "warn"
possibly-missing-attribute = "ignore"

[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
possibly-missing-attribute = "ignore"
possibly-missing-import = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/nbadb --cov-report=term-missing --import-mode=importlib"
