[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[project]
name = "nbadb"
version = "4.0.0"
description = "Comprehensive NBA database: 154 extractors covering 125 NBA API endpoints → star schema with 96 transforms → DuckDB + Parquet + CSV"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Wyatt Walsh", email = "wyattowalsh@gmail.com" }]
keywords = ["nba", "basketball", "stats", "database", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "nba-api>=1.11.4",
    "polars[database,pyarrow]>=1.39.3",
    "pandera[polars]>=0.30.1",
    "sqlmodel>=0.0.38,<0.1.0",
    "duckdb>=1.5.1",
    "kagglehub>=1.0",
    "typer>=0.15",
    "rich>=15.0.0",
    "loguru>=0.7",
    "pydantic-settings>=2.13",
    "textual>=8.2.3",
    "aiolimiter>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "hypothesis>=6.151.12",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
notebooks = [
    "great-tables>=0.21.0",
    "itables>=2.7.3",
]

[project.scripts]
nbadb = "nbadb.cli.app:app"

[project.urls]
Homepage = "https://github.com/wyattowalsh/nbadb"
Documentation = "https://nbadb.w4w.dev"
Repository = "https://github.com/wyattowalsh/nbadb"
"Kaggle Dataset" = "https://www.kaggle.com/datasets/wyattowalsh/basketball"

[tool.uv]
required-version = ">=0.4"

[tool.hatch.build.targets.wheel]
packages = ["src/nbadb"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/nbadb/kaggle/metadata.py" = ["E501"]
"notebooks/kaggle_update.py" = ["E402"]

[tool.ty.src]
include = ["src"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "warn"
possibly-missing-attribute = "warn"

[tool.ty.analysis]
allowed-unresolved-imports = ["pandera.**", "nba_api.**"]
respect-type-ignore-comments = true

[[tool.ty.overrides]]
include = ["**/models/**", "**/schemas/**"]
[tool.ty.overrides.rules]
unresolved-attribute = "warn"
invalid-assignment = "warn"
possibly-missing-attribute = "ignore"

[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
possibly-missing-attribute = "ignore"
possibly-missing-import = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/nbadb --cov-report=term-missing --import-mode=importlib"

[tool.coverage.run]
omit = ["src/nbadb/cli/tui.py"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "sportypy>=1.0.0",
    "sqlfluff>=4.1.0",
    "sqlglot>=30.4.2",
]
