[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbadb-chat"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.10",
    "deepagents",
    "langchain-mcp-adapters",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.3",
    "mcp[cli]",
    "pydantic-settings>=2.13",
    "plotly>=6.0",
    "matplotlib>=3.10",
    "numpy>=2.0",
    "pandas>=2.2",
    "duckduckgo-search>=7.0",
    "trafilatura>=2.0",
    "httpx>=0.28",
    "duckdb>=1.4",
    "openpyxl>=3.1",
    "loguru>=0.7",
    "kagglehub>=0.3",
]

[project.optional-dependencies]
copilot = ["github-copilot-sdk>=0.1"]
e2b = ["e2b-code-interpreter>=1.0"]
tracing = ["langfuse>=3.0"]

[tool.hatch.build.targets.wheel]
packages = ["server", "mcp_servers", "skills"]

# nbadb is imported via sys.path (avoids dep conflicts with chainlit's aiofiles cap).
# The chat app only uses nbadb.agent.safety, nbadb.agent.context, nbadb.kaggle.client.

[tool.ty]
python-version = "3.12"
src = ["."]
